--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+
+.bg-img {
+    width: 100%;
+    height: 100%;
+    background-image: url('./assets/images/mathbackground.jpg');
+    background-size: cover;
+}
