--- a/src/app/exam/exam.component.css
+++ b/src/app/exam/exam.component.css
@@ -22,28 +22,6 @@
     text-align: center;
 }
 
-* {
-    box-sizing: border-box;
-}
-
-.row {
-    display: flex;
-    flex-wrap: wrap;
-}
-
-.column {
-    flex: 25%;
-    padding: 20px;
-}
-
-@media screen and (max-width: 992px) {
-    .column {
-        flex: 50%;
-    }
-}
-
-@media screen and (max-width: 600px) {
-    .row {
-        flex-direction: column;
-    }
+button {
+    margin: 10px;
 }
