--- a/src/app/exam/exam.component.html
+++ b/src/app/exam/exam.component.html
@@ -1,14 +1,48 @@
-<div class="box">
+<div class="box" *ngIf="!questions">
     <h2>Holla! <i> </i></h2><br>
     <h2><i>exam {{ exam_id }}</i></h2>
+
+    <div>
+        <input type="text" class="inputBox" placeholder=" " autocomplete="off" [(ngModel)]="passcode" required>
+
+        <div><span style="color:rgb(255, 0, 0);font-style: italic; " *ngIf="errmessage" class="error ">{{ errmessage }}</span></div>
+        <button type="submit" [disabled]="passcode === ''" class="btn btn-primary" (click)="submit()">start exam</button>
+
+
+
+
+    </div>
+</div>
+
+<div class="box2" *ngIf="questions">
+    <h1>Hello world</h1>
+
+    <div *ngFor="let test of questions">
+        <div *ngFor="let sub of test.Physics">
+            <p>Question - {{sub.question}}</p>
+            <p>Option A - {{sub.opt1}}</p>
+            <p>Option B - {{sub.opt2}}</p>
+        </div>
+        <div *ngFor="let sub of test.Chemistry">
+            <p>Question - {{sub.question}}</p>
+            <p>Option A - {{sub.opt1}}</p>
+            <p>Option B - {{sub.opt2}}</p>
+        </div>
+        <div *ngFor="let sub of test.Maths">
+            <p>Question - {{sub.question}}</p>
+            <p>Option A - {{sub.opt1}}</p>
+            <p>Option B - {{sub.opt2}}</p>
+        </div>
+    </div>
+
+
+
 
 
     <div>
 
-        <div><span style="color:rgb(255, 0, 0);font-style: italic; " *ngIf="errmessage " class="error ">{{ errmessage }}</span></div>
-        <button class="btn btn-success" [routerLink]="'/home/'">Back</button>
+        <div><span style="color:rgb(255, 0, 0);font-style: italic; " *ngIf="errmessage" class="error ">{{ errmessage }}</span></div>
 
-        <app-logout></app-logout>
 
 
 
