submit cloud function deployed

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -14,6 +14,7 @@
         <div>
             <span style="color:rgb(255, 0, 0);font-style: italic; " *ngIf="this.exams==null" class="error">No exams available</span>
         </div>
+        <button class="btn btn-info" (click)="check()"></button>
         <app-logout>
 
         </app-logout>
